[project]
name = "pythonproject"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "inngest>=0.5.18",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
